# Hr-Assistant

./: .gitignore  manage.py  pyproject.toml  requirements.txt
Application/: admin.py  models.py
Hr/: admin.py  models.py
Hr/migrations/: 0001_initial.py  0002_alter_hrdecision_decision.py
HrAssistant/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
Interview/: admin.py  models.py
Interview/migrations/: 0001_initial.py  0002_alter_interviewsession_job_role.py  0002_interviewscore_created_at_and_more.py
JobRole/: admin.py  apps.py  models.py  serializer.py  urls.py  views.py
JobRole/migrations/: 0001_initial.py  0002_jobrole_full_text.py  0003_jobrole_recruiter_alter_jobrole_required_skills.py
Recruiter/: admin.py  models.py  serializer.py  urls.py  views.py
Recruiter/migrations/: 0001_initial.py  0002_recruiter_is_verified_alter_recruiter_user.py  0003_recruiter_phone.py
Resume/: admin.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
Resume/migrations/: 0001_initial.py  0002_delete_jobrole_resume_extracted_text_and_more.py  0002_resume_resume_score.py
Resume/services/: parser.py  prompts.py  research.ipynb  schemas.py
candidate/: models.py  serializers.py  urls.py  utils.py  views.py
candidate/migrations/: 0001_initial.py  0002_candidate_username.py  0002_remove_candidate_years_of_experience_and_more.py  0003_remove_candidate_username.py
