[project]
name = "hr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "celery>=5.6.2",
    "django>=5.2.11",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "faiss-cpu>=1.13.2",
    "huggingface-hub>=1.5.0",
    "langchain>=1.2.10",
    "langchain-groq>=1.1.2",
    "langgraph>=1.0.10",
    "psycopg2-binary>=2.9.11",
    "pymupdf>=1.27.1",
    "python-dotenv>=1.2.1",
    "redis>=7.2.1",
    "sentence-transformers>=5.2.3",
]
